--- a/src/app/features/dashboard/components/category-expenses/category-expenses.component.html
+++ b/src/app/features/dashboard/components/category-expenses/category-expenses.component.html
@@ -1,4 +1,4 @@
 <section>
     <span class="text-lg font-bold text-coinly-danger-dark mb-2 block">Expenses distribution</span>
-    <p-chart [data]="chartData" [options]="chartOptions" class="h-[20rem]" type="pie"></p-chart>
+    <p-chart [data]="chartData" [options]="chartOptions" width="500" height="500" type="pie"></p-chart>
 </section>
