--- a/src/app/features/dashboard/components/monthly-trends/monthly-trends.component.html
+++ b/src/app/features/dashboard/components/monthly-trends/monthly-trends.component.html
@@ -1,4 +1,4 @@
 <section>
-    <span class="text-lg font-bold text-coinly-primary mb-2 block">Incomes vs expenses trends (last 12 months)</span>
+    <span class="text-lg font-bold text-coinly-primary mb-2 block">Last 12 months trends</span>
     <p-chart [data]="chartData" [options]="chartOptions" class="h-[20rem]" type="line"></p-chart>
 </section>
