--- a/src/app/features/dashboard/components/summary-card/summary-card.component.html
+++ b/src/app/features/dashboard/components/summary-card/summary-card.component.html
@@ -1,10 +1,10 @@
-<div class="{{ backgroundColor }} text-coinly-light rounded-xl shadow p-6 flex flex-col gap-3">
+<div class="{{ backgroundColor }} flex flex-col space-y-3 p-4 text-coinly-light text-center rounded-xl shadow-lg">
     <div class="flex items-center gap-2">
         <i class="{{ icon }} text-3xl"></i>
         <span class="text-lg font-medium">{{ title }}</span>
     </div>
 
-    <span class="text-3xl font-bold">
+    <span class="text-2xl font-bold">
         {{ value | currency: currency }}
     </span>
 
@@ -14,8 +14,7 @@
 
     @if (showPercentageChange) {
     <span>
-        <i class="pi" [ngClass]="getSummaryCardIcon(percentageChange)"></i> {{ percentageChange | number:'1.2-2' }}%
-        this month
+        <i class="pi" [ngClass]="getSummaryCardIcon(percentageChange)"></i> {{ percentageChange | number:'1.2-2' }}% this month
     </span>
     }
 </div>
