--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="loginForm" class="space-y-4" (ngSubmit)="onLogin()">
-    <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
+    <h1 class="text-xl font-bold leading-tight tracking-tight text-coinly-primary md:text-2xl">
         Login to your account
     </h1>
 
