--- a/src/app/features/dashboard/components/recent-transactions/recent-transactions.component.html
+++ b/src/app/features/dashboard/components/recent-transactions/recent-transactions.component.html
@@ -15,7 +15,7 @@
             </div>
             <div class="flex flex-col">
                 <span class="font-bold text-ellipsis">{{ transaction.description }}</span>
-                <span class="text-xs text-gray-500">{{ transaction.category.name }}</span>
+                <span class="text-xs text-coinly-disabled">{{ transaction.category.name }}</span>
             </div>
         </div>
         <div class="flex flex-col items-center text-center">
