--- a/src/app/features/dashboard/components/upcoming-payments/upcoming-payments.component.html
+++ b/src/app/features/dashboard/components/upcoming-payments/upcoming-payments.component.html
@@ -15,12 +15,12 @@
             </div>
             <div class="flex flex-col">
                 <span class="font-bold">{{ transaction.description }}</span>
-                <span class="text-xs text-gray-500">{{ transaction.category.name }}</span>
+                <span class="text-xs text-coinly-disabled">{{ transaction.category.name }}</span>
             </div>
         </div>
         <div class="flex flex-col items-center text-center">
             <span class="font-bold">{{ transaction.maxPaymentDate| date: 'dd/MM/yyyy' }}</span>
-            <span class="text-xs text-gray-500">{{ transaction.paymentMethod.name }}</span>
+            <span class="text-xs text-coinly-disabled">{{ transaction.paymentMethod.name }}</span>
         </div>
         <span class="text-2xl content-center font-bold text-end text-coinly-info-dark">
             {{ transaction.amount | currency: transaction.currency }}
