--- a/src/app/shared/layout/sidebar.component.html
+++ b/src/app/shared/layout/sidebar.component.html
@@ -24,7 +24,7 @@
     <div class="space-y-2 py-6">
         <!-- Settings -->
         <div>
-            <a [routerLink]="['/dashboard']"
+            <a [routerLink]="['/settings']"
                 routerLinkActive="bg-coinly-primary font-bold"
                 class="flex items-center px-4 py-3 text-coinly-light hover:bg-coinly-primary rounded-lg transition-colors">
                 <i class="pi pi-fw pi-cog mr-3"></i>
