Update icon for New Transaction button in navbar and adjust severity

--- a/src/app/shared/layout/navbar.component.html
+++ b/src/app/shared/layout/navbar.component.html
@@ -8,8 +8,9 @@
   <div class="flex items-center space-x-4">
     <p-button
       label="New Transaction"
-      icon="pi pi-plus"
+      icon="pi pi-receipt"
       size="small"
+      severity="success"
       [raised]="true"
       (onClick)="onAddNewTransaction()" />
     <p-button
