--- a/src/app/features/transactions/pages/transactions.component.html
+++ b/src/app/features/transactions/pages/transactions.component.html
@@ -1,27 +1,54 @@
 <app-page-header>
-  <form [formGroup]="transactionSearchForm" class="space-y-2" (ngSubmit)="onSearch()">
-    <div class="w-full flex items-center gap-2">
-      <p-datepicker
-        id="date"
-        formControlName="date"
-        size="small"
-        view="month"
-        dateFormat="mm/yy"
-        [readonlyInput]="true" />
+  <form [formGroup]="transactionSearchForm" class="w-full">
+    <div class="grid grid-cols-6 gap-4">
+      <div class="col-span-2 flex flex-col">
+        <label for="rangeKey">Date Range</label>
+        <div class="flex items-center gap-2">
+          <p-select
+            id="rangeKey"
+            formControlName="rangeKey"
+            [options]="dateRangeOptions"
+            optionLabel="label"
+            optionValue="value"
+            (onChange)="onDateRangeChange($event)"
+            size="small" />
+          <p-datepicker
+            id="dateRange"
+            formControlName="dateRange"
+            selectionMode="range"
+            size="small"
+            dateFormat="dd/mm/yy"
+            [readonlyInput]="true"
+            (onSelect)="setDateRange('custom')"
+            [style]="{'width': '200px'}" />
+        </div>
+      </div>
+
+      <div class="flex flex-col">
+        <label for="category">Category</label>
+      </div>
+
+      <div class="flex flex-col">
+        <label for="paymentMethod">Payment Method</label>
+      </div>
+
+      <div class="flex flex-col">
+        <label for="status">Status</label>
+      </div>
+
+      <div class="flex flex-col justify-end items-end">
+        <p-button
+          [label]="selectedTransactions().length > 0 ? 'Pay (' + selectedTransactions().length + ') selected pendings' : 'Pay pendings'"
+          icon="pi pi-dollar"
+          [title]="selectedTransactions().length > 0 ? 'Pay (' + selectedTransactions().length + ') selected pendings' : 'Pay pendings'"
+          size="small"
+          [raised]="true"
+          (onClick)="onPayPendings()"
+          [disabled]="selectedTransactions().length === 0"
+        />
+      </div>
     </div>
   </form>
-
-  <div class="w-full sm:w-auto justify-end">
-    <p-button
-      [label]="selectedTransactions().length > 0 ? 'Pay (' + selectedTransactions().length + ') selected pendings' : 'Pay pendings'"
-      icon="pi pi-dollar"
-      [title]="selectedTransactions().length > 0 ? 'Pay (' + selectedTransactions().length + ') selected pendings' : 'Pay pendings'"
-      size="small"
-      [raised]="true"
-      (onClick)="onPayPendings()"
-      [disabled]="selectedTransactions().length === 0"
-    />
-  </div>
 </app-page-header>
 
 <div class="space-y-2">
