--- a/src/app/features/dashboard/components/upcoming-payments/upcoming-payments.component.html
+++ b/src/app/features/dashboard/components/upcoming-payments/upcoming-payments.component.html
@@ -19,8 +19,8 @@
             </div>
         </div>
         <div class="flex flex-col items-center text-center">
-            <span class="font-bold">{{ transaction.maxPaymentDate| date: 'dd/MM/yyyy' }}</span>
-            <span class="text-xs text-coinly-disabled">{{ transaction.paymentMethod.name }}</span>
+            <span class="font-bold">{{ transaction.maxPaymentDate | date: 'dd/MM/yyyy' }}</span>
+            <span class="text-xs text-coinly-disabled">{{ transaction.paymentMethodName }}</span>
         </div>
         <span class="text-2xl content-center font-bold text-end text-coinly-info-dark">
             {{ transaction.amount | currency: transaction.currency }}
