--- a/src/app/features/transactions/pages/transactions.component.html
+++ b/src/app/features/transactions/pages/transactions.component.html
@@ -98,10 +98,11 @@
         <div class="bg-white grid grid-cols-6 px-5 py-3 items-center rounded-2xl">
           <div class="col-span-2 flex items-center gap-3">
             <p-checkbox
-              (onChange)="onTransactionSelectionChange($event.checked, transaction)"
-              (checked)="isTransactionSelected(transaction)"
               [binary]="true"
-              [disabled]="transaction.status === TransactionStatus.Paid" />
+              [ngModel]="isTransactionSelected(transaction)"
+              [ngModelOptions]="{standalone: true}"
+              [disabled]="transaction.status === TransactionStatus.Paid"
+              (onChange)="onTransactionSelectionChange($event.checked, transaction)" />
             <div>
               <p-avatar
                 [icon]="getTransactionIcon(transaction)"
